:bug: Fix horizontal scrollbar appear

--- a/src/index.css
+++ b/src/index.css
@@ -26,4 +26,5 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    overflow: hidden;
 }
